--- a/Recvite/index.html
+++ b/Recvite/index.html
@@ -23,6 +23,7 @@
 <link href="assets/css/color.css" rel="stylesheet">
 <link href="assets/css/style.css" rel="stylesheet">
 <link href="assets/css/responsive.css" rel="stylesheet">
+<link href="assets/css/style-bein.css" rel="stylesheet">
 
 </head>
 
@@ -262,8 +263,26 @@
 
         <!-- banner-section -->
         <section class="banner-section">
-            <div class="banner-carousel owl-theme owl-carousel owl-dots-none">
-                <div class="slide-item">
+            <!-- <div class="banner-carousel owl-theme owl-carousel owl-dots-none"> -->
+
+                <div class="container-header">
+                    <img src="assets/images/resource/test.png" alt="" >
+                </div>
+                <!-- <div class="slide-item"> -->
+                    <!-- <div class="image-layer"></div>
+                    <div class="auto-container">
+                        <div class="content-box">
+                            <h1>The Right Candidate for your Business</h1>
+                            <p>There are many of passages of lorem Ipsum, but the majori have suffered alteration in some form.</p>
+                            <div class="btn-box">
+                                <a href="index.html" class="theme-btn-one">Discover More</a>
+                            </div>
+                        </div> 
+                    </div> -->
+                <!-- </div> -->
+
+
+                <!-- <div class="slide-item">
                     <div class="image-layer" style="background-image:url(assets/images/banner/banner-1.jpg)"></div>
                     <div class="auto-container">
                         <div class="content-box">
@@ -274,8 +293,8 @@
                             </div>
                         </div> 
                     </div>
-                </div>
-                <div class="slide-item">
+                </div> -->
+                <!-- <div class="slide-item">
                     <div class="image-layer" style="background-image:url(assets/images/banner/banner-2.jpg)"></div>
                     <div class="auto-container">
                         <div class="content-box">
@@ -286,47 +305,65 @@
                             </div>
                         </div> 
                     </div>
-                </div>
-            </div>
+                </div> -->
+            <!-- </div> -->
         </section>
         <!-- banner-section end -->
 
 
         <!-- feature-section -->
         <section class="feature-section bg-color-1 centred">
-            <div class="auto-container">
+            <div class="container-title-services-bein">
+                <h2>NOS SERVICES</h2>
+            </div>
+            <div class="auto-container container-services-bein">
                 <div class="row clearfix">
-                    <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
+                    <div class="col-lg-3 col-md-6 col-sm-12 feature-block ">
                         <div class="feature-block-one">
-                            <div class="inner-box">
-                                <div class="icon-box"><i class="flaticon-mission"></i></div>
-                                <h2>Leadership <br />Training</h2>
+                            <div class="inner-box custom-width-services-bein">
+                                <div class="icon-box"><i class="far fa-lightbulb light-icon"></i>
+                                </div>
+                                <h2>Création</h2>
                                 <figure class="image-box">
-                                    <img src="assets/images/resource/feature-1.jpg" alt="">
+                                    <img src="assets/images/resource/creation.jpg" alt="">
                                     <a href="index.html" class="theme-btn-one">Read more</a>
                                 </figure>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
+                    <div class="col-lg-3 col-md-6 col-sm-12 feature-block">
                         <div class="feature-block-one">
-                            <div class="inner-box">
-                                <div class="icon-box"><i class="flaticon-creative-idea"></i></div>
-                                <h2>Improving <br />Resources</h2>
+                            <div class="inner-box custom-width-services-bein">
+                                <div class="icon-box"><i class="far fa-file-code light-icon"></i>
+                                </div>
+                                <h2>Développement<br/> web</h2>
                                 <figure class="image-box">
-                                    <img src="assets/images/resource/feature-2.jpg" alt="">
+                                    <img src="assets/images/resource/developpeur-web.jpg" alt="">
                                     <a href="index.html" class="theme-btn-one">Read more</a>
                                 </figure>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 feature-block">
+                    <div class="col-lg-3 col-md-6 col-sm-12 feature-block">
                         <div class="feature-block-one">
-                            <div class="inner-box">
-                                <div class="icon-box"><i class="flaticon-solution"></i></div>
-                                <h2>Recruitement <br />Solutions</h2>
+                            <div class="inner-box custom-width-services-bein">
+                                <div class="icon-box"><i class="fas fa-bullhorn light-icon"></i>
+                                </div>
+                                <h2>Commercialisa<br/>-tion</h2>
                                 <figure class="image-box">
-                                    <img src="assets/images/resource/feature-3.jpg" alt="">
+                                    <img src="assets/images/resource/commercialiser.jpeg" alt="">
+                                    <a href="index.html" class="theme-btn-one">Read more</a>
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 feature-block">
+                        <div class="feature-block-one">
+                            <div class="inner-box custom-width-services-bein">
+                                <div class="icon-box"><i class="far fa-file-alt light-icon"></i></div>
+                                <h2>Impression</h2>
+                                <figure class="image-box">
+                                    <img src="assets/images/resource/print.jpg" alt="">
                                     <a href="index.html" class="theme-btn-one">Read more</a>
                                 </figure>
                             </div>
@@ -1056,8 +1093,6 @@
             <span class="fa fa-arrow-up"></span>
         </button>
     </div>
-
-
     <!-- jequery plugins -->
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/popper.min.js"></script>
