--- a/Recvite/index.html
+++ b/Recvite/index.html
@@ -267,57 +267,20 @@
 
                 <div class="container-header">
                     <img src="assets/images/resource/test.png" alt="" >
+                    <img src="assets/images/resource/test2.png" alt="" >
                 </div>
-                <!-- <div class="slide-item"> -->
-                    <!-- <div class="image-layer"></div>
-                    <div class="auto-container">
-                        <div class="content-box">
-                            <h1>The Right Candidate for your Business</h1>
-                            <p>There are many of passages of lorem Ipsum, but the majori have suffered alteration in some form.</p>
-                            <div class="btn-box">
-                                <a href="index.html" class="theme-btn-one">Discover More</a>
-                            </div>
-                        </div> 
-                    </div> -->
-                <!-- </div> -->
-
-
-                <!-- <div class="slide-item">
-                    <div class="image-layer" style="background-image:url(assets/images/banner/banner-1.jpg)"></div>
-                    <div class="auto-container">
-                        <div class="content-box">
-                            <h1>The Right Candidate for your Business</h1>
-                            <p>There are many of passages of lorem Ipsum, but the majori have suffered alteration in some form.</p>
-                            <div class="btn-box">
-                                <a href="index.html" class="theme-btn-one">Discover More</a>
-                            </div>
-                        </div> 
-                    </div>
-                </div> -->
-                <!-- <div class="slide-item">
-                    <div class="image-layer" style="background-image:url(assets/images/banner/banner-2.jpg)"></div>
-                    <div class="auto-container">
-                        <div class="content-box">
-                            <h1>The Right Candidate for your Business</h1>
-                            <p>There are many of passages of lorem Ipsum, but the majori have suffered alteration in some form.</p>
-                            <div class="btn-box">
-                                <a href="index.html" class="theme-btn-one">Discover More</a>
-                            </div>
-                        </div> 
-                    </div>
-                </div> -->
-            <!-- </div> -->
+               
         </section>
         <!-- banner-section end -->
 
 
         <!-- feature-section -->
-        <section class="feature-section bg-color-1 centred">
+        <section class="feature-section bg-color-1 centred" >
             <div class="container-title-services-bein">
                 <h2>NOS SERVICES</h2>
             </div>
-            <div class="auto-container container-services-bein">
-                <div class="row clearfix">
+            <div class="auto-container container-services-bein" >
+                <div class="row clearfix" >
                     <div class="col-lg-3 col-md-6 col-sm-12 feature-block ">
                         <div class="feature-block-one">
                             <div class="inner-box custom-width-services-bein">
@@ -349,7 +312,7 @@
                             <div class="inner-box custom-width-services-bein">
                                 <div class="icon-box"><i class="fas fa-bullhorn light-icon"></i>
                                 </div>
-                                <h2>Commercialisa<br/>-tion</h2>
+                                <h2>Marketing</h2>
                                 <figure class="image-box">
                                     <img src="assets/images/resource/commercialiser.jpeg" alt="">
                                     <a href="index.html" class="theme-btn-one">Read more</a>
@@ -451,9 +414,9 @@
                     <h2>Outsourced HR Services</h2>
                 </div>
                 <div class="row clearfix">
-                    <div class="col-lg-4 col-md-6 col-sm-12 service-block">
-                        <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms">
-                            <div class="inner-box">
+                    <div class="col-lg-3 col-md-6 col-sm-12 service-block jobs-beinkom" >
+                        <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms" >
+                            <div class="inner-box" >
                                 <figure class="image-box">
                                     <img src="assets/images/service/service-1.jpg" alt="">
                                     <span class="category">Management</span>
@@ -468,7 +431,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 service-block">
+                    <div class="col-lg-3 col-md-6 col-sm-12 service-block jobs-beinkom">
                         <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="300ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <figure class="image-box">
@@ -485,7 +448,92 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-12 service-block">
+                    <div class="col-lg-3 col-md-6 col-sm-12 service-block jobs-beinkom">
+                        <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="300ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/service/service-2.jpg" alt="">
+                                    <span class="category">Resources</span>
+                                    <i class="flaticon-controller"></i>
+                                </figure>
+                                <div class="lower-content">
+                                    <h3><a href="technology-resource.html">Technology Resource</a></h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod.</p>
+                                    <div class="link"><a href="technology-resource.html">Read More</a></div>
+                                    <div class="light-icon"><i class="flaticon-controller"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 service-block jobs-beinkom">
+                        <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/service/service-3.jpg" alt="">
+                                    <span class="category">Solutions</span>
+                                    <i class="flaticon-policy"></i>
+                                </figure>
+                                <div class="lower-content">
+                                    <h3><a href="staffing-solutions.html">Staffing Solutions</a></h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod.</p>
+                                    <div class="link"><a href="staffing-solutions.html">Read More</a></div>
+                                    <div class="light-icon"><i class="flaticon-policy"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 service-block jobs-beinkom" >
+                        <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="00ms" data-wow-duration="1500ms" >
+                            <div class="inner-box" >
+                                <figure class="image-box">
+                                    <img src="assets/images/service/service-1.jpg" alt="">
+                                    <span class="category">Management</span>
+                                    <i class="flaticon-consulting"></i>
+                                </figure>
+                                <div class="lower-content">
+                                    <h3><a href="hr-consulting.html">HR Consulting</a></h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod.</p>
+                                    <div class="link"><a href="hr-consulting.html">Read More</a></div>
+                                    <div class="light-icon"><i class="flaticon-consulting"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 service-block jobs-beinkom">
+                        <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="300ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/service/service-2.jpg" alt="">
+                                    <span class="category">Resources</span>
+                                    <i class="flaticon-controller"></i>
+                                </figure>
+                                <div class="lower-content">
+                                    <h3><a href="technology-resource.html">Technology Resource</a></h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod.</p>
+                                    <div class="link"><a href="technology-resource.html">Read More</a></div>
+                                    <div class="light-icon"><i class="flaticon-controller"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 service-block jobs-beinkom">
+                        <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="300ms" data-wow-duration="1500ms">
+                            <div class="inner-box">
+                                <figure class="image-box">
+                                    <img src="assets/images/service/service-2.jpg" alt="">
+                                    <span class="category">Resources</span>
+                                    <i class="flaticon-controller"></i>
+                                </figure>
+                                <div class="lower-content">
+                                    <h3><a href="technology-resource.html">Technology Resource</a></h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod.</p>
+                                    <div class="link"><a href="technology-resource.html">Read More</a></div>
+                                    <div class="light-icon"><i class="flaticon-controller"></i></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12 service-block jobs-beinkom">
                         <div class="service-block-one wow fadeInUp animated animated" data-wow-delay="600ms" data-wow-duration="1500ms">
                             <div class="inner-box">
                                 <figure class="image-box">
@@ -874,7 +922,7 @@
 
 
         <!-- news-section -->
-        <section class="news-section sec-pad bg-color-1">
+        <!-- <section class="news-section sec-pad bg-color-1">
             <div class="auto-container">
                 <div class="row clearfix">
                     <div class="col-lg-4 col-md-12 col-sm-12 title-column">
@@ -962,7 +1010,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- news-section end -->
 
 
