--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <title>Recvite - HTML 5 Template Preview</title>
 
 <!-- Fav Icon -->
-<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+<link rel="icon" href="assets/images/favicon.png" type="image/x-icon">
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -49,15 +49,14 @@
                 <div class="top-inner clearfix">
                     <ul class="info-list pull-left clearfix">
                         <li><i class="flaticon-email"></i><a href="mailto:conatact@beinkom.com">contact@beinkom.com</a></li>
-                        <li><i class="flaticon-telephone"></i><a href="tel:928886660000">92 888 666 0000</a></li>
-                        <li><i class="flaticon-pin"></i>Suite 20 Golden Street USA</li>
+                        <li><i class="flaticon-telephone"></i><a href="tel:928886660000">+212 612-526367</a></li>
+                        <li><i class="flaticon-pin"></i>Residence chounia Avenue Youssef IbnTachafine</li>
                     </ul>
                     <div class="right-column pull-right clearfix">
                         <ul class="social-links clearfix">
-                            <li><a href="index.html"><i class="fab fa-facebook-square"></i></a></li>
-                            <li><a href="index.html"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="index.html"><i class="fab fa-pinterest-p"></i></a></li>
-                            <li><a href="index.html"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="https://web.facebook.com/profile.php?id=61574626132909&locale=fr_FR" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/beinkom-digital-314831357?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                            <li><a href="https://www.instagram.com/beinkom/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                         </ul>
                         <div class="language-box">
                             <img src="assets/images/icons/flag-1.png" alt="">
@@ -190,7 +189,7 @@
             <div class="sticky-header">
                 <div class="outer-box">
                     <div class="logo-box">
-                        <figure class="logo"><a href="index.html"><img src="assets/images/logo.png" alt=""></a></figure>
+                        <figure class="logo"><a href="index.html"><img src="assets/images/logo-beinkom.png" alt=""></a></figure>
                     </div>
                     <div class="menu-area">
                         <nav class="main-menu clearfix">
@@ -775,7 +774,7 @@
                                 <div class="icon-box">
                                     <i class="flaticon-investment"></i>
                                     <span>01</span>
-                                    <div class="icon-shape" style="background-image: url(assets/images/shape/shape-4.png);"></div>
+                                    <div class="icon-shape" style="background-image: url(assets/images/CLOUD-ICON.png);"></div>
                                 </div>
                                 <h3>Consult with Team</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod.</p>
@@ -788,7 +787,7 @@
                                 <div class="icon-box">
                                     <i class="flaticon-checklist"></i>
                                     <span>02</span>
-                                    <div class="icon-shape" style="background-image: url(assets/images/shape/shape-4.png);"></div>
+                                    <div class="icon-shape" style="background-image: url(assets/images/CLOUD-ICON.png);"></div>
                                 </div>
                                 <h3>Make a Schedule</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod.</p>
@@ -801,7 +800,7 @@
                                 <div class="icon-box">
                                     <i class="flaticon-outsourcing"></i>
                                     <span>03</span>
-                                    <div class="icon-shape" style="background-image: url(assets/images/shape/shape-4.png);"></div>
+                                    <div class="icon-shape" style="background-image: url(assets/images/CLOUD-ICON.png);"></div>
                                 </div>
                                 <h3>Hire & Enjoy</h3>
                                 <p>Lorem ipsum dolor sit amet, consectetur notted adipisicing elit sed do eiusmod.</p>
@@ -1055,7 +1054,7 @@
                         <div class="row clearfix">
                             <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
                                 <div class="footer-widget logo-widget">
-                                    <figure class="footer-logo"><a href="index.html"><img src="assets/images/footer-logo.png" alt=""></a></figure>
+                                    <figure class="footer-logo"><a href="index.html"><img src="assets/images/logo-beinkom.png" alt=""></a></figure>
                                     <p>Join our newsletter and get latest updates</p>
                                     <form action="contact.html" method="post">
                                         <div class="form-group">
@@ -1065,10 +1064,9 @@
                                     </form>
                                     <ul class="social-links clearfix">
                                         <li><h6>Connect:</h6></li>
-                                        <li><a href="index.html"><i class="fab fa-twitter"></i></a></li>
-                                        <li><a href="index.html"><i class="fab fa-facebook-square"></i></a></li>
-                                        <li><a href="index.html"><i class="fab fa-pinterest-p"></i></a></li>
-                                        <li><a href="index.html"><i class="fab fa-instagram"></i></a></li>
+                                        <li><a href="https://www.linkedin.com/in/beinkom-digital-314831357?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                                        <li><a href="https://web.facebook.com/profile.php?id=61574626132909&locale=fr_FR" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                                        <li><a href="https://www.instagram.com/beinkom/" target="_blank"><i class="fab fa-instagram"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
