--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
 
 
         <!-- preloader -->
-        <div class="preloader"></div>
+        <div class="loading">
+            <div class="container-image">
+                <img src="assets/images/logo-animation-web.png" alt="" srcset="" class="logo-loading">
+                <!-- <div id="bird"></div> -->
+                 <!-- <img src="assets/images/bird1.png" alt="" srcset="" class="bird"> -->
+                <div class="bird"></div>
+            </div>
+        </div>
         <!-- preloader -->
 
 
@@ -49,7 +56,7 @@
                 <div class="top-inner clearfix">
                     <ul class="info-list pull-left clearfix">
                         <li><i class="flaticon-email"></i><a href="mailto:conatact@beinkom.com">contact@beinkom.com</a></li>
-                        <li><i class="flaticon-telephone"></i><a href="tel:928886660000">+212 612-526367</a></li>
+                        <li><i class="flaticon-telephone"></i><a href="tel:212612526367">+212 612-526367</a></li>
                         <li><i class="flaticon-pin"></i>Residence chounia Avenue Youssef IbnTachafine</li>
                     </ul>
                     <div class="right-column pull-right clearfix">
@@ -905,6 +912,14 @@
                                 <div class="icon-box">"</div>
                                 <p>This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.</p>
                                 <h5>Christine Eve</h5>
+                                <figure class="image-box"><img src="assets/images/resource/testimonial-2.png" alt=""></figure>
+                            </div>
+                        </div>
+                        <div class="testimonial-block-one">
+                            <div class="inner-box">
+                                <div class="icon-box">"</div>
+                                <p>This is due to their excellent service, competitive pricing and customer support. It’s throughly refresing to get such a personal touch.</p>
+                                <h5>Christine Eve</h5>
                                 <figure class="image-box"><img src="assets/images/resource/testimonial-3.png" alt=""></figure>
                             </div>
                         </div>
@@ -1032,21 +1047,21 @@
                             <div class="inner">
                                 <div class="icon-box"><i class="flaticon-mail"></i></div>
                                 <h6>Email</h6>
-                                <p><a href="mailto:needhelp@example.com">needhelp@example.com</a></p>
+                                <p><a href="mailto:contact@beinkom.com">contact@beinkom.com</a></p>
                             </div>
                         </div>
                         <div class="single-item">
                             <div class="inner">
                                 <div class="icon-box"><i class="flaticon-phone"></i></div>
                                 <h6>Call</h6>
-                                <p><a href="tel:928886660000">+ 92 888 666 0000</a></p>
+                                <p><a href="tel:212612526367">+ 212 612-526367</a></p>
                             </div>
                         </div>
                         <div class="single-item">
                             <div class="inner">
                                 <div class="icon-box"><i class="flaticon-address"></i></div>
                                 <h6>Address</h6>
-                                <p>Suite 20 Golden Street USA</p>
+                                <p>Residence chounia Avenue Youssef IbnTachafine</p>
                             </div>
                         </div>
                     </div>
